error fix from file nameing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,12 @@
         android:backgroundTint="@color/bluePerymary"
         android:paddingHorizontal="20dp"
         />
+    <Button
+        android:id="@+id/buttonThree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Activity three"
+        />
 
     <TextView
         android:id="@+id/ResponseView"
